@@ -2,15 +2,11 @@
 
 use strict;
 use warnings;
-use Test::Needs 'Test::EOF';
-use Test::Most;
 
-BEGIN {
-	if($ENV{'AUTHOR_TESTING'}) {
-		Test::EOF->import();
-		all_perl_files_ok({ minimum_newlines => 1, maximum_newlines => 4 });
-		done_testing();
-	} else {
-		plan(skip_all => 'Author tests not required for installation');
-	}
-}
+use Test::DescribeMe qw(author);
+use Test::Most;
+use Test::Needs 'Test::EOF';
+
+Test::EOF->import();
+all_perl_files_ok({ minimum_newlines => 1, maximum_newlines => 4 });
+done_testing();
