@@ -2,15 +2,10 @@
 
 use strict;
 use warnings;
-use Test::Most;
 
-if($ENV{AUTHOR_TESTING}) {
-	eval 'use Test::Pod::No404s';
-	if($@) {
-		plan(skip_all => 'Test::Pod::No404s required for testing POD');
-	} else {
-		all_pod_files_ok();
-	}
-} else {
-	plan(skip_all => 'Author tests not required for installation');
-}
+use Test::DescribeMe qw(author);
+use Test::Most;
+use Test::Needs 'Test::Pod::No404s';
+
+Test::Pod::No404s->import();
+all_pod_files_ok();
