@@ -1,6 +1,8 @@
 Revision history for Class::Simple::Readonly::Cached
 
 0.11
+	Use gtar to create a distribution on Macs
+	Use Test::DescribeMe to simplify tests
 	Support CircleCI
 
 0.10	Sat Jun 22 10:22:42 EDT 2024
